generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum UserStatus {
  ACTIVE
  INACTIVE
  LOCKED
}

enum RoleName {
  ADMIN
  RESOURCE_MANAGER
  DEPARTMENT_HEAD
  TEACHER
  SUPPLIER
  MAINTENANCE_TECHNICIAN
}

enum DepartmentStatus {
  ACTIVE
  INACTIVE
}

model Role {
  id          String   @id @default(uuid())
  name        RoleName @unique
  description String?
  users       User[]
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
}

model Department {
  id          String           @id @default(uuid())
  name        String           @unique
  description String?
  status      DepartmentStatus @default(ACTIVE)
  users       User[]
  createdAt   DateTime         @default(now())
  updatedAt   DateTime         @updatedAt
  deletedAt   DateTime?
}

model User {
  id           String     @id @default(uuid())
  email        String     @unique
  passwordHash String
  firstName    String
  lastName     String
  status       UserStatus @default(ACTIVE)
  roleId       String
  role         Role       @relation(fields: [roleId], references: [id])
  departmentId String?
  department   Department? @relation(fields: [departmentId], references: [id])
  auditLogs    AuditLog[]
  createdAt    DateTime   @default(now())
  updatedAt    DateTime   @updatedAt
  deletedAt    DateTime?

  @@index([email])
  @@index([roleId])
  @@index([departmentId])
}

model AuditLog {
  id         String   @id @default(uuid())
  actorId    String?
  actor      User?    @relation(fields: [actorId], references: [id])
  action     String
  targetType String
  targetId   String?
  metadata   Json?
  createdAt  DateTime @default(now())

  @@index([actorId])
  @@index([targetType, targetId])
  @@index([createdAt])
}
